name:                tmphs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tmphs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Gen
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , cassandra-cql
                     , exceptions >= 0.8.3
                     , lens >= 4.15.1
                     , random >= 1.1
                     , template-haskell
                     , text >= 1.2.2.1
                     , uuid >= 1.3.13
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tmphs
